# aboutCmake

./: cmakeLearning.md  readme.md
demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  main.cpp
demo3/: CMakeLists.txt
demo3/app/: CMakeLists.txt  main.cpp
demo3/libs/: CMakeLists.txt
demo3/libs/mySqrt/: CMakeLists.txt
demo3/libs/mySqrt/include/: MySqrt.h
demo3/libs/mySqrt/src/: MySqrt.cpp
demo4/: CMakeLists.txt
